--- a/src/app/pages/authorized/my/my-page.component.html
+++ b/src/app/pages/authorized/my/my-page.component.html
@@ -22,7 +22,18 @@
 
         <app-edit-event />
 
-        <app-timeline-container />
+        <app-timeline
+          [timeline]="timeline()"
+          (filterByTag)="filterByTag($event)"
+          (onDelete)="deleteEvent($event)"
+          (onEdit)="editEvent($event)"
+          [canEdit]="true" />
+
+        <app-modal-confirm
+          [show]="showConfirmWindow()"
+          (confirmAction)="confirmDelete()"
+          (dismissAction)="dismissDelete()"
+          confirmMessage="Are you shure you want to delete this event?"></app-modal-confirm>
 
         @if (!activeTimeline()) {
           <app-create-timeline-button
