feat: showing table of contents

--- a/src/app/share/layout/layout.component.html
+++ b/src/app/share/layout/layout.component.html
@@ -7,7 +7,7 @@
       <ng-content></ng-content>
     </div>
     <app-table-of-contents-container
-      [state]="tableOfContent()"></app-table-of-contents-container>
+      [state]="tableOfContents()"></app-table-of-contents-container>
   </div>
 </div>
 <app-notifications />
