fix: add table of contents to develop page

--- a/src/app/feature/table-of-contents/components/table-of-contents-container/table-of-contents-container.component.html
+++ b/src/app/feature/table-of-contents/components/table-of-contents-container/table-of-contents-container.component.html
@@ -8,7 +8,7 @@
 
       <app-table-of-content
         class="table-of-content"
-        setActive="LayoutTesting"
+        [setActive]="setActive()"
         [state]="state()"></app-table-of-content>
     </div>
   </div>
