--- a/src/app/feature/table-of-contents/components/table-of-contents/table-of-contents.component.html
+++ b/src/app/feature/table-of-contents/components/table-of-contents/table-of-contents.component.html
@@ -6,6 +6,7 @@
       class="item overflow-hidden border-r-4 border-accent p-2 ps-4">
       <a
         tabindex="0"
+        [href]="item.link"
         class="link block no-underline"
         (click)="itemClick(item)"
         (keypress)="itemClick(item)"
