feat: add feature flag component and disable editing

--- a/src/app/feature/timeline/components/event/menu/menu.component.html
+++ b/src/app/feature/timeline/components/event/menu/menu.component.html
@@ -1,17 +1,19 @@
 @if (timelineEvent().id) {
   <ul class="bg-lighter menu menu-horizontal gap-2 rounded-box">
+    <app-feature-flag feature="edit_event">
+      <li>
+        <a
+          tabindex="0"
+          class="btn btn-ghost btn-sm"
+          (click)="onEdit.emit(timelineEvent())"
+          (keyup)="onEdit.emit(timelineEvent())">
+          <ng-icon name="saxEditOutline" size="20" />
+        </a>
+      </li>
+    </app-feature-flag>
     <li>
       <a
         tabindex="0"
-        class="btn btn-ghost btn-sm"
-        (click)="onEdit.emit(timelineEvent())"
-        (keyup)="onEdit.emit(timelineEvent())">
-        <ng-icon name="saxEditOutline" size="20" />
-      </a>
-    </li>
-    <li>
-      <a
-        tabindex="1"
         class="btn btn-ghost btn-sm hover:bg-warning hover:text-warning-content"
         (click)="onDelete.emit(timelineEvent())"
         (keyup)="onDelete.emit(timelineEvent())">
