--- a/src/app/feature/header-profile-menu/header-profile-menu.component.html
+++ b/src/app/feature/header-profile-menu/header-profile-menu.component.html
@@ -75,4 +75,8 @@
       </ul>
     </app-feature-flag>
   </div>
+
+  <app-feature-flag feature="user_feature_flag">
+    <app-show-user-features [showFeatures]="false" />
+  </app-feature-flag>
 }
