feat: create action for saving features for user

--- a/src/app/feature/header-profile-menu/header-profile-menu.component.html
+++ b/src/app/feature/header-profile-menu/header-profile-menu.component.html
@@ -77,6 +77,8 @@
   </div>
 
   <app-feature-flag feature="user_feature_flag">
-    <app-show-user-features [showFeatures]="false" />
+    <app-show-user-features
+      [showFeatures]="true"
+      (save)="saveFeature($event)" />
   </app-feature-flag>
 }
