--- a/src/app/feature/user/features/show-user-features/show-user-features.component.html
+++ b/src/app/feature/user/features/show-user-features/show-user-features.component.html
@@ -12,7 +12,9 @@
       <div class="w-14 flex-none place-content-center">
         <input
           type="checkbox"
+          [name]="feature.name"
           class="toggle"
+          (change)="changeFeature(feature, $event)"
           [class.toggle-success]="feature.canShow"
           [attr.checked]="feature.canShow() ? 'checked' : null" />
       </div>
