--- a/src/app/pages/non-authorized/develop/develop-page.component.html
+++ b/src/app/pages/non-authorized/develop/develop-page.component.html
@@ -69,5 +69,13 @@
           [timelineEvent]="{ id: 1 }"></app-timeline-event-menu>
       </div>
     </div>
+
+    <div class="py-4" id="ThemeSwitchComponent">
+      <h2 class="text-2xl">ThemeSwitchComponent</h2>
+
+      <div class="mt-4 grid w-full grid-cols-1 gap-4">
+        <app-theme-switch />
+      </div>
+    </div>
   </div>
 </app-layout>
