feat: add theme switcher to page

--- a/src/app/feature/ui/theme/theme-switch.component.html
+++ b/src/app/feature/ui/theme/theme-switch.component.html
@@ -5,6 +5,6 @@
   [checked]="isDark ? 'checked' : null"
   (change)="themeService.toggleTheme()" />
 
-<label for="toggle_theme" class="toggle--label cursor-pointer flex relative">
+<label for="toggle_theme" class="toggle--label relative flex cursor-pointer">
   <span class="toggle--label-background"></span>
 </label>
