--- a/src/app/share/layout/header/header.component.html
+++ b/src/app/share/layout/header/header.component.html
@@ -29,6 +29,9 @@
       <app-copy-token [token]="token()" />
     </app-feature-flag>
 
+    <app-feature-flag feature="dark_light_mode">
+      <app-theme-switch />
+    </app-feature-flag>
     <app-header-profile-menu />
   </div>
 </div>
