fix: fix logo color

--- a/src/app/share/layout/header/header.component.html
+++ b/src/app/share/layout/header/header.component.html
@@ -5,9 +5,7 @@
     </button> -->
   </div>
   <div class="flex-1">
-    <a class="btn btn-accent text-xl text-neutral-content" href="/">
-      timeline
-    </a>
+    <a class="logo btn text-xl" href="/"> timeline </a>
   </div>
   <div class="flex-none gap-2">
     <app-feature-flag feature="profile_dropdown" [nigate]="true">
