--- a/src/app/share/layout/header/header.component.html
+++ b/src/app/share/layout/header/header.component.html
@@ -30,6 +30,13 @@
     <app-feature-flag feature="dark_light_mode">
       <app-theme-switch />
     </app-feature-flag>
+
     <app-header-profile-menu />
+
+    <app-feature-flag feature="profile_dropdown" [nigate]="true">
+      <app-logout-button
+        [isAuthorized]="isAuthorized()"
+        (logout)="logout()"></app-logout-button>
+    </app-feature-flag>
   </div>
 </div>
