--- a/src/app/feature/header-profile-menu/header-profile-menu.component.html
+++ b/src/app/feature/header-profile-menu/header-profile-menu.component.html
@@ -20,6 +20,14 @@
 
     <app-feature-flag feature="profile_dropdown">
       <ul tabindex="0" class="dropdown-content">
+        <app-feature-flag feature="show_user_accounts">
+          @if (currentAccount() !== null) {
+            <li>
+              <app-menu-accounts
+                [currentAccount]="currentAccount()"></app-menu-accounts>
+            </li>
+          }
+        </app-feature-flag>
         <app-feature-flag feature="user_settings">
           <li>
             <a tabindex="0" class="btn">
