--- a/src/app/feature/user/accounts/menu-accounts/menu-accounts.component.html
+++ b/src/app/feature/user/accounts/menu-accounts/menu-accounts.component.html
@@ -1,6 +1,6 @@
 @if (accounts().length <= 1) {
   @if (currentAccount(); as user) {
-    <app-current-account
+    <app-menu-account
       [name]="user.name"
       [avatar]="user.avatar || null"
       [firstLetter]="user.firstLetter" />
@@ -35,7 +35,7 @@
       @if (currentAccount(); as user) {
         <li>
           Current account:
-          <app-current-account
+          <app-menu-account
             [name]="user.name"
             [avatar]="user.avatar || null"
             [firstLetter]="user.firstLetter" />
@@ -49,7 +49,7 @@
           class="w-full cursor-pointer ps-2 hover:rounded hover:bg-success"
           (click)="selectAccountClick(account)"
           (keyup)="selectAccountClick(account)">
-          <app-current-account
+          <app-menu-account
             [name]="account.name"
             [avatar]="account.avatar || null"
             [firstLetter]="account.firstLetter" />
