--- a/src/app/feature/header-profile-menu/header-profile-menu.component.html
+++ b/src/app/feature/header-profile-menu/header-profile-menu.component.html
@@ -1,5 +1,5 @@
 @if (authorizedUser(); as user) {
-  <div class="dropdown dropdown-end dropdown-hover">
+  <div class="dropdown dropdown-end dropdown-open dropdown-hover">
     <div
       tabindex="0"
       role="button"
@@ -24,6 +24,7 @@
           @if (currentAccount() !== null) {
             <li>
               <app-menu-accounts
+                [accounts]="userAccounts()"
                 [currentAccount]="currentAccount()"></app-menu-accounts>
             </li>
           }
