fix: fix showing current account

--- a/src/app/feature/header-profile-menu/header-profile-menu.component.html
+++ b/src/app/feature/header-profile-menu/header-profile-menu.component.html
@@ -1,5 +1,5 @@
 @if (authorizedUser(); as user) {
-  <div class="dropdown dropdown-end dropdown-open dropdown-hover">
+  <div class="dropdown dropdown-end dropdown-hover">
     <div
       tabindex="0"
       role="button"
