--- a/src/app/share/layout/header/legacy-user-button/legacy-user-button.component.html
+++ b/src/app/share/layout/header/legacy-user-button/legacy-user-button.component.html
@@ -3,8 +3,8 @@
     tabindex="0"
     role="button"
     class="profile_button btn btn-ghost"
-    (click)="goToDashboard()"
-    (keyup)="goToDashboard()">
+    (click)="onGoToDashboard.emit()"
+    (keyup.enter)="onGoToDashboard.emit()">
     <div class="avatar">
       @if (isLoading() === true) {
         <span class="loading loading-spinner"></span>
