--- a/src/app/feature/user/top-menu/top-menu.component.scss
+++ b/src/app/feature/user/top-menu/top-menu.component.scss
@@ -25,7 +25,13 @@
   }
 
   .current_account {
-    @apply flex cursor-pointer place-items-center justify-start gap-2 bg-accent pe-2 text-accent-content;
+    @apply flex cursor-pointer place-items-center justify-start gap-2 pe-2;
+
+    transition: all 0.2s linear;
+  }
+
+  &:has(.content.open) .current_account {
+    @apply bg-warning;
   }
 
   .content {
