fix: fix showing link preview with long url or text

--- a/src/app/feature/edit-event/edit-event-form/link-preview/link-preview.component.html
+++ b/src/app/feature/edit-event/edit-event-form/link-preview/link-preview.component.html
@@ -34,7 +34,7 @@
           src="{{ previewHolder.data.data?.image }}"
           [alt]="previewHolder.data.data?.title || previewHolder.url" />
       </span>
-      <span class="flex-1">
+      <span class="flex-1 overflow-hidden">
         <div class="flex shrink flex-col">
           <div class="font-bold">
             {{ previewHolder.data.data?.title || previewHolder.url }}
