fix: fix showing long text

--- a/src/app/feature/timeline/components/event/content/main/main-content.component.html
+++ b/src/app/feature/timeline/components/event/content/main/main-content.component.html
@@ -1,9 +1,11 @@
-<app-timeline-event-date [date]="event().date" />
-<div class="text-lg font-black">{{ event().title }}</div>
-<app-timeline-event-tags
-  [tags]="event().tags"
-  (clickToTag)="filterByTag.emit($event)" />
-<app-markdown-content
-  [content]="event().description"
-  class="mt-2"></app-markdown-content>
-<app-timeline-event-url [url]="event().url" />
+<div class="overflow-hidden">
+  <app-timeline-event-date [date]="event().date" />
+  <div class="text-lg font-black">{{ event().title }}</div>
+  <app-timeline-event-tags
+    [tags]="event().tags"
+    (clickToTag)="filterByTag.emit($event)" />
+  <app-markdown-content
+    [content]="event().description"
+    class="mt-2"></app-markdown-content>
+  <app-timeline-event-url [url]="event().url" />
+</div>
