--- a/src/app/share/layout/footer/footer.component.html
+++ b/src/app/share/layout/footer/footer.component.html
@@ -5,7 +5,7 @@
   </aside>
   <nav class="grid-flow-col gap-4 md:place-self-center md:justify-self-end">
     <div
-      class="tooltip tooltip-left tooltip-open tooltip-primary"
+      class="tooltip tooltip-right tooltip-primary lg:tooltip-left lg:tooltip-open"
       data-tip="Add an issue">
       <a
         href="https://github.com/wert2all/timeline-frontend/issues/new"
