fix: rename wrong output properties

--- a/src/app/feature/timeline/components/create-timeline-button/create-timeline-button.component.html
+++ b/src/app/feature/timeline/components/create-timeline-button/create-timeline-button.component.html
@@ -8,7 +8,7 @@
 
 <app-modal
   [show]="showAddTimelineWindow()"
-  (onClosed)="showAddTimelineWindow.set(false)">
+  (closed)="showAddTimelineWindow.set(false)">
   <app-add-timeline
     [isAuthorized]="isAuthorized()"
     [isLoading]="isLoading()"
