--- a/src/app/feature/user/features/show-user-features/show-user-features.component.html
+++ b/src/app/feature/user/features/show-user-features/show-user-features.component.html
@@ -1,4 +1,4 @@
-<app-modal [show]="showFeatures()" title="Features" (onClosed)="onClose.emit()">
+<app-modal [show]="showFeatures()" title="Features" (closed)="close.emit()">
   @for (feature of features; track $index) {
     <div class="mt-4 flex">
       <div class="order flex-auto">
