--- a/src/app/share/layout/header/header.component.html
+++ b/src/app/share/layout/header/header.component.html
@@ -19,8 +19,8 @@
             class="absolute -top-6 right-0 z-20 w-56"
             [authorizedUserToken]="token"
             [activeAccount]="account"
-            (onAccountClick)="goToDashboard()"
-            (onLogout)="logout()" />
+            (accountClick)="goToDashboard()"
+            (logout)="logout()" />
         </div>
       }
     }
