--- a/src/app/share/modal/confirm/modal-confirm.component.html
+++ b/src/app/share/modal/confirm/modal-confirm.component.html
@@ -1,6 +1,6 @@
 <app-modal
   [show]="show()"
-  (onClosed)="dismissAction.emit()"
+  (closed)="dismissAction.emit()"
   [title]="confirmMessage()">
   <div class="modal-action">
     <form method="dialog" (submit)="dismissAction.emit()">
